@@ -13,6 +13,10 @@ reverse time order.
 
 ==============
 
+Tag: V00-04-14
+2017-01-04 Mikhail S. Dubrovin
+- update ex_new_dets.py, ex_source_dsname.py for jungfrau
+	
 Tag: V00-04-13
 2016-12-20 Christopher O'Grady
 - Add jungfrau
